--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-elements": "^2.0.0",
-    "react-native-linear-gradient": "^2.5.6",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "expo-linear-gradient": "~8.1.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
