--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "dependencies": {
     "axios": "^0.19.2",
     "expo": "~37.0.3",
+    "expo-linear-gradient": "~8.1.0",
     "mongodb-stitch-react-native-sdk": "^4.8.0",
     "react": "~16.9.0",
+    "react-async": "^10.0.1",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-elements": "^2.0.0",
-    "react-native-web": "~0.11.7",
-    "expo-linear-gradient": "~8.1.0"
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.1.0",
